--- a/include/modules.html
+++ b/include/modules.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../css/program.css">
 </head>
 
-<body>
+<body class="wavy-line">
   <div class="container">
     <header>
       <div class="logo"><a href="../index.html"><img src="../img/Skillbox.png" alt="Skillbox"></a>
