--- a/css/modules.css
+++ b/css/modules.css
@@ -48,6 +48,9 @@ ul {
 }
 
 .wavy-line {
-
-    background-image: url(../img/figura\ 1.png) inherit;
+    background         : url(../img/figura\ 1.png);
+    background-position: bottom;
+    background-repeat  : no-repeat;
+    background-size    : 1800px;
+    padding-bottom     : 600px;
 }
